--- a/САЙТ NERDS/css/style.css
+++ b/САЙТ NERDS/css/style.css
@@ -146,18 +146,6 @@ li {
   color: #000000;
 }
 
-.projects li{
-  opacity: 0.2;
-}
-
-.projects li:hover{
-  opacity: 1.0;
-}
-
-.projects li:active{
-  opacity: 0.1;
-}
-
 .contacts h3
 .price h2{
   width: 192px;
@@ -444,6 +432,8 @@ li {
   color: #ffffff;
   border-radius: 3px;
   border: none;
+  outline: none;
+  cursor: pointer;
 }
 
 .button-red {
@@ -573,8 +563,6 @@ li {
   margin-bottom: 35px;
 }
 
-/*секция о Нас*/
-
 .about {
   display: block;
   width: 650px;
@@ -609,7 +597,6 @@ li {
 .about h4 {
   display: block;
   text-transform: uppercase;
-
   padding-top: 20px;
   padding-bottom: 15px;
   font-size: 16px;
@@ -653,8 +640,6 @@ li {
   background-color: #fb565a;
 }
 
-/*секция Преимуществ*/
-
 .advantages {
   width: 360px;
   min-height: 315px;
@@ -695,6 +680,7 @@ li {
   min-height: 180px;
   border-bottom: 2px solid #eeeeee;
   border-top: 2px solid #eeeeee;
+  margin-bottom: 80px;
 }
 
 .projects-list {
@@ -707,8 +693,35 @@ li {
  }
 
 .projects-item {
+  position: relative;
   width: 200px;
   min-height: 54px;
+}
+
+.projects a {
+  opacity: 0.2;
+}
+
+.projects a:hover {
+  opacity: 1.0;
+}
+
+.projects a:active {
+  opacity: 0.1;
+}
+
+.projects li::after {
+  content: "";
+  position: absolute;
+  background: #dfdfdf;
+  height: 52px;
+  width: 2px;
+  left: -45px;
+  bottom: 30px;
+}
+
+.projects-list li:first-child::after {
+  display: none;
 }
 
 .map-wrapper {
@@ -751,13 +764,10 @@ li {
   padding: 40px 50px;
 }
 
-
 .contacts h3{
-
   margin: 0px;
   padding: 0;
 }
-
 
 .contacts ul{
   width:220px;
@@ -779,7 +789,6 @@ li {
   color: #283136;
 }
 
-
 .contacts li:last-child{
   margin-top: 15px;
   padding: 0;
@@ -792,6 +801,24 @@ li {
   margin-left: 51px;
   padding: 0;
 }
+
+/*Модальное окно*/
+
+.modal{
+  position: fixed;
+  z-index: 100;
+  top: 50%;
+  left: 50%;
+  margin-left: -480px;
+  margin-top: -300px;
+  padding-bottom: 85px;
+  box-sizing: border-box;
+  border-radius: 5px;
+  width: 960px;
+  height: 590px;
+  background-color: #fff;
+  box-shadow: -1px 12px 19px -5px #000;
+  display: none;}
 
 .fillform  {
   box-shadow: 0px 20px 40px 0 rgba(0, 1, 1, 0.75);
@@ -846,6 +873,7 @@ li {
   letter-spacing: normal;
   text-align: left;
   color: #000000;
+  margin-top: 20px;
 }
 
 .fillform input,textarea {
@@ -858,6 +886,8 @@ li {
   font: inherit;
   border: solid 2px #d7dcde;
   background-color: #ffffff;
+  border-radius: 5px;
+  outline: none;
 }
 
 .fillform textarea {
@@ -873,6 +903,13 @@ li {
   border: solid 2px #000000;
   background-color: #ffffff;
 }
+
+.fillform input:invalid, .fillform textarea input:invalid {
+  box-shadow: none;
+  color: #e74246;
+  border: 2px solid #e74246;
+}
+
 
 .close-button {
   position: absolute;
@@ -906,8 +943,6 @@ li {
   border: 0;
 }
 
-/*Футер*/
-
 .main-footer  {
   display: flex;
   margin-top: 65px;
@@ -939,11 +974,14 @@ footer li a:focus{
   background-color: #d7373b;
 }
 
-footer img:focus{
+/*footer img:focus{
   opacity: 0.1;
   object-fit: contain;
   background-color: #d7373b;
-}
+  margin: auto;
+}*/
+
+
 
 .footer-social {
   padding: 0;
@@ -962,7 +1000,7 @@ footer img:focus{
   min-height: 100px;
 }
 
-.ikon:active{
+footer li a:focus img{
   opacity: 0.3;
 }
 
@@ -1017,8 +1055,6 @@ footer img:focus{
   margin-top: 12px;
 }
 
-/*Сетка внутренней страницы*/
-
 .catalog-title{
   display: block;
   width: 722px;
@@ -1044,6 +1080,7 @@ footer img:focus{
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
+  margin-bottom: 60px;
 }
 
 .sorting {
@@ -1052,9 +1089,11 @@ footer img:focus{
   display: block;
   margin-top: 18px;
   margin-bottom: 20px;
+
 }
 
 .sorting h2 {
+  display: inline-block;
   font-family: Roboto;
   font-size: 18px;
   font-weight: bold;
@@ -1064,10 +1103,22 @@ footer img:focus{
   letter-spacing: normal;
   text-align: left;
   color: #000000;
+  margin-right: 35%;
 }
 
-.sorting li {
-  opacity: 0.3;
+.sorting ul{
+  display: inline-block;
+  min-width: 300px;
+  margin-left: auto;
+  padding: 0px;
+}
+
+.sort-item{
+  display: inline-block;
+  margin-right: 20px;
+}
+
+.sort-item a{
   font-size: 14px;
   font-weight: normal;
   font-style: normal;
@@ -1077,43 +1128,27 @@ footer img:focus{
   text-align: left;
   color: rgba(0, 0, 0, 0.3);
   list-style: none;
-}
-
-.sorting li:first-child {
-  font-size: 14px;
-  font-weight: normal;
-  font-style: normal;
-  font-stretch: normal;
-  line-height: 1.29;
-  letter-spacing: normal;
-  text-align: left;
-  color: #000000;
-}
-
-.sorting h2 {
   margin: 0px;
-  margin-right: 14px;
-  display: inline-block;
-  width: 133px;
-}
-
-.sorting ul {
-  margin-left: 250px;
-  display: inline-block;
-  min-width: 300px;
-  padding: 0px;
-}
-
-.sorting li {
-  margin: 0px;
-  display: inline-block;
   min-width: 65px;
+  cursor: pointer;
 }
 
-.sorting li:last-child {
+.sort-item a:hover{
+  color: rgba(0, 0, 0, 0.6);
+}
+
+.sort-item a:active{
+  color: black;
+}
+
+.sort-item:last-child {
   margin: 0px;
-  display: inline-block;
-  width: 110px;
+  min-width: 110px;
+}
+
+.sort-item-active a{
+  color: black;
+  opacity: 1;
 }
 
 .arrows {
@@ -1122,15 +1157,28 @@ footer img:focus{
   margin-left: 0px;
 }
 
-
 .arrow {
-  margin: 0px;
+  margin-left: 10px;
   display: inline-block;
   width: 11px;
   height: 10px;
   object-fit: contain;
   background-color: #ffffff;
   border:none;
+  opacity: 0.2;
+  cursor: pointer;
+}
+
+.arrow:hover{
+  opacity: 0.5;
+}
+
+.arrow:focus{
+  opacity: 1;
+}
+
+.arrow-active{
+  opacity: 1;
 }
 
 .side-block {
@@ -1148,21 +1196,105 @@ footer img:focus{
   display: block;
 }
 
-.arrow-up {
-  object-fit: contain;
-  background-color: #ffffff;
-  border:none;
-  opacity: 0.2;
-}
-
 fieldset {
   border: none;
 }
 
-.grid ,.features {
+.grid,
+.features {
   margin-top: 20px;
   display: block;
   width: 261px;
+}
+
+.grid ul,
+.features ul{
+  padding-left: 5px;
+  margin-bottom: 40px;
+}
+
+.grid li,
+.features li{
+  margin-bottom: 25px;
+}
+
+
+.filter-radio,
+.filter-check {
+  display: none;
+}
+
+.filter-label {
+  position: relative;
+  font-size: 16px;
+  line-height: 20px;
+  display: block;
+  cursor: pointer;
+  font-weight: normal;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: 1.25;
+  letter-spacing: normal;
+  text-align: left;
+  color: #283136;
+  padding-bottom: 25px;
+  padding-left: 37px;
+}
+
+.filter-label:last-child {
+  padding-bottom: 0;
+}
+
+.filter-label-radio::before {
+  content: "";
+  width: 25px;
+  height: 25px;
+  top: -5px;
+  left: -5px;
+  position: absolute;
+  background-image: url("../img/radio-off.svg");
+  opacity: 0.3;
+}
+
+.filter-label-radio:hover::before,
+.filter-label-check:hover::before {
+  opacity: 1;
+}
+
+.filter-label-radio:active::before,
+.filter-label-check:active::before {
+  opacity: .1;
+}
+
+input[type=radio]:checked + label::before {
+  content: "";
+  width: 25px;
+  height: 25px;
+  top: -5px;
+  left: -5px;
+  position: absolute;
+  background-image: url("../img/radio-on.svg");
+}
+
+.filter-label-check::before {
+  content: "";
+  width: 23px;
+  height: 23px;
+  top: 0;
+  left: 0;
+  position: absolute;
+  background-image: url("../img/checkbox-off.svg");
+  opacity: 0.4;
+}
+
+input[type=checkbox]:checked + label::before {
+  content: "";
+  width: 27px;
+  height: 23px;
+  top: 0;
+  left: 0;
+  position: absolute;
+  background-image: url("../img/checkbox-on.svg");
 }
 
 .filter-item {
@@ -1224,7 +1356,7 @@ fieldset {
 }
 
 .range-controls .toggle-max {
-  left: 110px;
+  left: 120px;
 }
 
 .price-controls {
@@ -1261,7 +1393,6 @@ fieldset {
 
 .max-price input{
   width: 70%;
-
 }
 
 .parameters legend {
@@ -1290,9 +1421,6 @@ fieldset {
 
 /*Секция шаблонов*/
 
-.templates li{
-  list-style: none;
-}
 
 .visually-hidden {
   position: absolute;
@@ -1310,6 +1438,7 @@ fieldset {
   position: relative;
   margin-top: 0px;
   margin-bottom: 50px;
+  list-style: none;
 }
 
 .templates {
@@ -1335,25 +1464,105 @@ fieldset {
   opacity: 1;
 }
 
-.page-selector{
-  display: block;
-  list-style: none;
-  padding-left: 0px
-
+.catalog-item {
+position: relative;
 }
 
+.catalog-item:hover .catalog-item-hover {
+  display: block;
+}
 
-.page-number{
-  width: 50px;
+.catalog-item-hover {
+  position: absolute;
+  display: flex;
+  justify-content: flex-start;
+  flex-direction: column;
+  height: 235px;
+  width: 100%;
+  background-color: #eeeeee;
+  box-sizing: border-box;
+  margin-top: 300px;
+  z-index: 10;
+  bottom: 10px;
+  display: none;
+  cursor: pointer;
+}
+
+.catalog-item-title{
+  min-width: 73px;
+  min-height: 20px;
+  font-size: 18px;
+  line-height: 30px;
+  padding: 0px;
+  margin-top: 35px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 10px;
+  text-align: center;
+  text-transform: uppercase;
+  min-height: 30px;
+}
+
+.catalog-discription {
+  min-width: 180px;
+  min-height: 34px;
+  font-size: 16px;
+  line-height: 18px;
+  margin-top: 0px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 30px;
+  color: #939393;
+  text-align: center;
+}
+
+.button-hover{
+  width: 200px;
   height: 50px;
+  background-color: #fb565a;
+  font-family: Roboto;
+  font-size: 16px;
+  font-weight: 500;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: 1.13;
+  letter-spacing: normal;
+  text-align: center;
+  color: #ffffff;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+}
+
+.catalog-item-title:hover {
+  color:#fb565a;
+}
+
+.catalog-item-title:active {
+  color: rgba(0, 0, 0, 0.3);
+}
+
+.page-selector {
+  display: block;
+  min-height: 50px;
+  list-style: none;
+  padding: 0px;
+  margin: 0px;
+}
+
+.page-number {
+  width: 50px;
+  min-height: 50px;
+  vertical-align: top;
   background-color: #eeeeee;
   display: inline-block;
   text-align: center;
   margin: 0px;
   margin-right: 11px;
+  padding: 11px;
 }
 
-.page-number a{
+.page-number a {
   font-family: Roboto;
   font-size: 16px;
   font-weight: 500;
@@ -1364,11 +1573,11 @@ fieldset {
   color: #000000;
 }
 
-.page-number:hover{
+.page-number:hover {
   background-color: #dfdfdf;
 }
 
-.page-number:focus{
+.page-number:focus {
   box-shadow: inset 0px 3px 0 0 rgba(0, 1, 1, 0.1);
   background-color: #d5d5d5;
   color: rgba(0, 0, 0, 0.3);
@@ -1392,7 +1601,7 @@ fieldset {
   display: inline-block;
   text-align: center;
   margin: 0px;
-
+  padding: 11px;
 }
 
 .next-page a{
@@ -1405,13 +1614,6 @@ fieldset {
   text-align: center;
   text-transform: uppercase;
   color: #000000;
-}
-
-.next-page a,.page-number a{
-  display: block;
-  margin-top: 15px;
-  margin-bottom: auto;
-
 }
 
 .next-page:hover{
@@ -1433,4 +1635,10 @@ fieldset {
    opacity: 0.3;
 }
 
-
+.page-current {
+  min-width: 50px;
+  min-height: 50px;
+  background-color: #ffffff;
+  border: 3px solid #eeeeee;
+  padding: 9px;
+}
