--- a/САЙТ NERDS/css/style.css
+++ b/САЙТ NERDS/css/style.css
@@ -24,24 +24,25 @@ body {
 }
 
 a {
-    text-decoration: none;
-  }
+  text-decoration: none;
+}
 
 .main-header-logo :hover {
-    opacity: 0.8;
+  opacity: 0.8;
 }
 
 .main-header-logo :active {
-    opacity: 0.3;
+  opacity: 0.3;
 }
+
 .main-navigation {
-    font-size: 16px;
-    line-height: 1.88;
-    letter-spacing: normal;
-    text-align: left;
-    color: #000000;
-    background-color: #eeeeee;
-  }
+  font-size: 16px;
+  line-height: 1.88;
+  letter-spacing: normal;
+  text-align: left;
+  color: #000000;
+  background-color: #eeeeee;
+}
 
 .nav-item {
   display: inline-block;
@@ -49,7 +50,6 @@ a {
   margin-right: 50px;
   min-height: 50px;
   width: 100%;
-
   height: 15px;
   font-size: 16px;
   font-weight: 500;
@@ -90,40 +90,35 @@ a {
   font-size: 55px;
 }
 
-li {
-  list-style: none;
-}
-
 .site-navigation,
 .menu-basket {
-    text-transform: uppercase;
-  }
+  text-transform: uppercase;
+}
 
 .site-navigation a,
 .basket a {
-    color: #ffffff;
-  }
+  color: #ffffff;
+}
 
 .basket a:hover{
-    color: #fb565a;
+  color: #fb565a;
 }
 
 .basket a:focus {
-    color: rgba(0, 0, 0, 0.3);
+  color: rgba(0, 0, 0, 0.3);
 }
 
 .basket a:active {
-      color: #000000;
-      border-bottom: 2px solid  #fb565a;
+  color: #000000;
+  border-bottom: 2px solid  #fb565a;
 }
 
 .main-slider,
 .main-header{
-    background-color: #eeeeee;
-  }
+  background-color: #eeeeee;
+}
 
-.main-slider p,
-.products p{
+.main-slider p, .products p {
   font-size: 16px;
   font-weight: normal;
   font-style: normal;
@@ -134,7 +129,7 @@ li {
   color: #283136;
 }
 
-.products h2{
+.products h2 {
   width: 166px;
   font-size: 24px;
   font-weight: bold;
@@ -147,9 +142,8 @@ li {
 }
 
 .contacts h3
-.price h2{
+.price h2 {
   width: 192px;
-
   font-family: Roboto;
   font-size: 18px;
   font-weight: bold;
@@ -172,12 +166,10 @@ li {
 
 .main-header {
   position: relative;
-  /* Временно для сетки */
   min-height: 355px;
 }
 
 .main-navigation {
-  /* Временно для сетки */
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -186,12 +178,10 @@ li {
 .main-header-logo {
   width: 160px;
   height: 65px;
- /* Временно для сетки */
 }
 
 .main-navigation-wrapper {
   width: 100%;
-  /* Временно для сетки */
   min-height: 20px;
   background-color: #eeeeee;
 }
@@ -208,7 +198,6 @@ li {
   margin: 0;
   padding: 0;
   list-style: none;
-  /* Временно для сетки */
   min-height: 70px;
 }
 
@@ -269,14 +258,14 @@ li {
 }
 
 .slider-dot::after {
-    content: "";
-    position: absolute;
-    width: 4px;
-    height: 4px;
-    background: #ffffff;
-    border-radius: 50%;
-    top: 2px;
-    right: 2px;
+  content: "";
+  position: absolute;
+  width: 4px;
+  height: 4px;
+  background: #ffffff;
+  border-radius: 50%;
+  top: 2px;
+  right: 2px;
 }
 
 .slider-list {
@@ -367,8 +356,6 @@ li {
   border: none;
 }
 
-
-
 .main {
   margin-top: 0px;
   position: relative;
@@ -400,15 +387,13 @@ li {
 
 .product-item {
   width: 300px;
-  /* Временно для сетки */
   min-height: 170px;
 }
 
 .product-item p {
-    display: block;
-    margin-bottom: 30px;
-  }
-
+  display: block;
+  margin-bottom: 30px;
+}
 
 .product-item-1 p {
   width: 250px;
@@ -519,7 +504,7 @@ li {
   color: rgba(0, 0, 0, 0.3);
 }
 
-.button-gray:active{
+.button-gray:active {
   box-shadow: inset 0px 3px 0 0 rgba(0, 1, 1, 0.1);
   background-color: #d5d5d5;
 }
@@ -537,8 +522,6 @@ li {
   color: #283136;
 }
 
-
-
 .product-item-3 p {
   width: 230px;
   height: 40px;
@@ -551,8 +534,6 @@ li {
   text-align: left;
   color: #283136;
 }
-
-
 
 .index-columns {
   width: 1160px;
@@ -618,7 +599,6 @@ li {
   color: #283136;
   list-style: none;
 }
-
 
 .about ul {
   display: block;
@@ -690,6 +670,7 @@ li {
   background-image: none;
   background-color: transparent;
   margin-bottom: 0px;
+  list-style: none;
  }
 
 .projects-item {
@@ -764,21 +745,22 @@ li {
   padding: 40px 50px;
 }
 
-.contacts h3{
+.contacts h3 {
   margin: 0px;
   padding: 0;
 }
 
-.contacts ul{
+.contacts ul {
   width:220px;
   height: 71px;
   margin-top: 23px;
   margin-left: 0px;
   margin-bottom: 37px;
   padding: 0;
+  list-style: none;
 }
 
-.contacts li{
+.contacts li {
   font-size: 16px;
   font-weight: normal;
   font-style: normal;
@@ -789,12 +771,12 @@ li {
   color: #283136;
 }
 
-.contacts li:last-child{
+.contacts li:last-child {
   margin-top: 15px;
   padding: 0;
 }
 
-.contacts.button{
+.contacts.button {
   width:219px;
   height: 50px;
   margin-bottom: 47px;
@@ -802,9 +784,11 @@ li {
   padding: 0;
 }
 
-/*Модальное окно*/
+.contacts a{
+  color: #283136;
+}
 
-.modal{
+.modal {
   position: fixed;
   z-index: 100;
   top: 50%;
@@ -820,7 +804,7 @@ li {
   box-shadow: -1px 12px 19px -5px #000;
   display: none;}
 
-.fillform  {
+.fillform {
   box-shadow: 0px 20px 40px 0 rgba(0, 1, 1, 0.75);
   box-sizing: border-box;
   width: 960px;
@@ -835,7 +819,7 @@ li {
   margin-bottom: 30px;
 }
 
-.fillform p{
+.fillform p {
   font-size: 16px;
   font-weight: normal;
   font-style: normal;
@@ -846,11 +830,11 @@ li {
   color: #000000;
 }
 
-.fillform label{
+.fillform label {
   display: block;
 }
 
-.text-form{
+.text-form {
   width: 360px;
   margin: 0;
   margin-bottom: 10px;
@@ -934,7 +918,7 @@ li {
   opacity: 0.1;
 }
 
-.button-form{
+.button-form {
   position: absolute;
   bottom: 80px;
   background-color: #fb565a;
@@ -943,7 +927,7 @@ li {
   border: 0;
 }
 
-.main-footer  {
+.main-footer {
   display: flex;
   margin-top: 65px;
   padding-top: 20px;
@@ -955,7 +939,7 @@ li {
   padding-bottom: 75px;
 }
 
-footer li a{
+footer li a {
   background-color: #e1e1e1;
   width:80px;
   height:80px;
@@ -965,23 +949,14 @@ footer li a{
   text-align:center;
 }
 
-footer li a:hover{
+footer li a:hover {
   background-color: #e74246;
 }
 
-footer li a:focus{
+footer li a:focus {
   box-shadow: inset 0px 3px 0 0 rgba(0, 1, 1, 0.1);
   background-color: #d7373b;
 }
-
-/*footer img:focus{
-  opacity: 0.1;
-  object-fit: contain;
-  background-color: #d7373b;
-  margin: auto;
-}*/
-
-
 
 .footer-social {
   padding: 0;
@@ -990,7 +965,7 @@ footer li a:focus{
   min-height: 80px;
 }
 
-.social-icons{
+.social-icons {
   align-items: center;
   justify-content: space-around;
   display: flex;
@@ -998,34 +973,33 @@ footer li a:focus{
   padding: 0;
   width: 260px;
   min-height: 100px;
+  list-style: none;
 }
 
-footer li a:focus img{
+footer li a:focus img {
   opacity: 0.3;
 }
 
-.vk-ikon{
+.vk-ikon {
   margin: 32px 26px 32px 26px;
 }
 
-.fb-ikon{
+.fb-ikon {
   margin: 28px 34px 32px 33px;
 }
 
-.insta-ikon{
+.insta-ikon {
   margin: 29px 26px 29px 27px;
 }
 
 .footer-discount {
-  margin-top: 78px;
-  margin-right: 356px;
-  margin-bottom: 76px;
   display: block;
-  width: 560px;
+  min-width: 660px;
   min-height: 100px;
+  margin-top: 40px;
 }
 
-.footer-discount h3{
+.footer-discount h3 {
   width: 545px;
   height: 35px;
   font-family: Roboto;
@@ -1037,12 +1011,11 @@ footer li a:focus img{
   letter-spacing: normal;
   text-align: left;
   color: #000000;
-  margin: 0;
 }
 
-.footer-discount p{
+.footer-discount p {
   width: 346px;
-  height: 16px;
+  min-height: 16px;
   font-family: Roboto;
   font-size: 16px;
   font-weight: normal;
@@ -1055,7 +1028,7 @@ footer li a:focus img{
   margin-top: 12px;
 }
 
-.catalog-title{
+.catalog-title {
   display: block;
   width: 722px;
   height: 43px;
@@ -1075,7 +1048,7 @@ footer li a:focus img{
   padding-top: 80px;
 }
 
-.catalog-container{
+.catalog-container {
   width: 1160px;
   display: flex;
   justify-content: space-between;
@@ -1106,19 +1079,19 @@ footer li a:focus img{
   margin-right: 35%;
 }
 
-.sorting ul{
+.sorting ul {
   display: inline-block;
   min-width: 300px;
   margin-left: auto;
   padding: 0px;
 }
 
-.sort-item{
+.sort-item {
   display: inline-block;
   margin-right: 20px;
 }
 
-.sort-item a{
+.sort-item a {
   font-size: 14px;
   font-weight: normal;
   font-style: normal;
@@ -1133,11 +1106,11 @@ footer li a:focus img{
   cursor: pointer;
 }
 
-.sort-item a:hover{
+.sort-item a:hover {
   color: rgba(0, 0, 0, 0.6);
 }
 
-.sort-item a:active{
+.sort-item a:active {
   color: black;
 }
 
@@ -1146,7 +1119,7 @@ footer li a:focus img{
   min-width: 110px;
 }
 
-.sort-item-active a{
+.sort-item-active a {
   color: black;
   opacity: 1;
 }
@@ -1169,15 +1142,15 @@ footer li a:focus img{
   cursor: pointer;
 }
 
-.arrow:hover{
+.arrow:hover {
   opacity: 0.5;
 }
 
-.arrow:focus{
+.arrow:focus {
   opacity: 1;
 }
 
-.arrow-active{
+.arrow-active {
   opacity: 1;
 }
 
@@ -1207,20 +1180,16 @@ fieldset {
   width: 261px;
 }
 
-.grid ul,
-.features ul{
+.grid ul, .features ul {
   padding-left: 5px;
   margin-bottom: 40px;
 }
 
-.grid li,
-.features li{
+.grid li, .features li {
   margin-bottom: 25px;
 }
 
-
-.filter-radio,
-.filter-check {
+.filter-radio, .filter-check {
   display: none;
 }
 
